# merger

./: .gitignore  .gitingnore  CMakeLists.txt  FDSiMergerMain.cpp  FDSiTestMergerMain.cpp  MergerBetaImp.cpp  MergerImpBeta.cpp  MergerImpPid.cpp  MergerMain.cpp  NextMergerMain.cpp  README.md  VandleMergerMain.cpp  config.yaml
anamerger/include/: AnamergerLinkDef.h  AnamergerPidSelector.h  AnamergerSelector.h  AnamergerSparseSelector.h  AnamergerVANDLESelector.h  AnamergerYSOSelector.h  CorrectedVANDLEData.h  CorrectionLinkDef.h  CorrectionSelector.h  LibraryConfig.h.in  TCutsVandle.h  TraceAnalyzerOutputSelector.h  VANDLEToFCorrector.h  hIsotope.h
anamerger/source/: AnamergerMain.cpp  AnamergerPidMain.cpp  AnamergerPidSelector.cxx  AnamergerPidSelector.h  AnamergerSelector.cpp  AnamergerSparseMain.cpp  AnamergerSparseSelector.cpp  AnamergerVANDLEMain.cpp  AnamergerVANDLESelector.cxx  AnamergerYSOSelector.cpp  CMakeLists.txt  CorrectionMain.cpp  CorrectionSelector.cpp  TraceAnalyzerOutputSelector.cpp  VANDLEToFCorrector.cpp  createTChain.cxx  hIsotope.cxx
anamergerLists/: CMakeLists.txt  gen_anamergerLists.py.in
config/: CMakeLists.txt  YSO_2D_map.txt  config.yaml  config_anamerger.yaml  config_anamerger_pid.yaml  config_gen.py  config_gen.sh  config_gen.sh.in  config_trace_analyzer.yaml  config_vandle_corrector.yaml  configall.sh.in  configallnuclides.sh  yso_pixel_map_july19.txt
config/anamerger/: config_gen.sh.in  configallnuclides.sh
config/bar_config/: CMakeLists.txt  VandleBars.json  config_gen.sh.in  config_vandle_corrector_source.yaml
config/config/: config.yaml  config_gen.py  config_gen.sh.in  configall.sh.in
config/config/anamerger/: CMakeLists.txt
config/config/bar_config/: barconf_gen.py  config_vandle_corrector.yaml
config/config/corrector/: config_gen.sh.in  correction_config.yaml.in
config/corrector/: CMakeLists.txt  configallnuclides.sh
event_selector/include/: AnamergerBetaTagSelector.h  BetaEventListLinkDef.h  BetaEventSelector.h  BetaEventTag.h  TBetaEventList.h
event_selector/source/: AnamergerBetaTagMain.cpp  AnamergerBetaTagSelector.cpp  BetaEventListMain.cpp  BetaEventSelector.cpp  BetaEventTag.cpp  BetaEventTagMain.cpp  CMakeLists.txt  TBetaEventList.cpp
include/: .TreeMerger.hpp.swp  AidaTSScannor.hpp  BRIKENTSScannor.hpp  BRIKENTypes.h  BetaTSScannor.hpp  BetaTreeMerger.hpp  BigRIPSTSScannor.hpp  BigRIPSTreeData.h  E19044BetaTSScanor.hpp  E19044BetaTreeMerger.hpp  E19044Data.hpp  E19044ImplantTSScanor.hpp  E19044NEXTTSScanor.hpp  FDSiBetaTSScanor.hpp  FDSiBetaTreeMerger.hpp  FDSiData.hpp  FDSiImplantTSScanor.hpp  FDSiVANDLETSScanor.hpp  ImplantTSScannor.hpp  OutputTreeData.hpp  RemainTime.h  TSScannorBase.hpp  TreeDataLinkDef.h  TreeMerger.hpp  YSOMap.h  YSOPixelatedMap.hpp  YamlParameter.h  YamlReader.hpp
mergerLists/: CMakeLists.txt  gen_mergerLists.py.in
scripts/: 2  CMakeLists.txt  run_anamerger.pbs.in  run_anamerger.py  run_config.pbs.in  run_corrector.pbs.in  run_corrector.py  run_merger.pbs.in  run_merger.py  run_trace_analyzer.pbs.in  run_trace_analyzer.py
scripts/config/: config.yaml  config_event_tag.yaml  config_gen.sh  config_gen_trace_analyzer.sh  config_trace_analyzer.yaml  configall.sh
scripts/config/anamerger/: anamerger_config.yaml  config_As88.yaml  config_As89.yaml  config_As90.yaml  config_As91.yaml  config_Co73.yaml  config_Co74.yaml  config_Co75.yaml  config_Cu77.yaml  config_Cu78.yaml  config_Cu79.yaml  config_Cu80.yaml  config_Cu81.yaml  config_Cu82.yaml  config_Ga83.yaml  config_Ga84.yaml  config_Ga85.yaml  config_Ga86.yaml  config_Ga87.yaml  config_Ge85.yaml  config_Ge86.yaml  config_Ge87.yaml  config_Ge88.yaml  config_Ge89.yaml  config_Ni75.yaml  config_Ni76.yaml  config_Ni77.yaml  config_Ni78.yaml  config_Ni79.yaml  config_Zn80.yaml  config_Zn81.yaml  config_Zn82.yaml  config_Zn83.yaml  config_Zn84.yaml  config_anamerger_as88.yaml  config_anamerger_as89.yaml  config_anamerger_as90.yaml  config_anamerger_as91.yaml  config_anamerger_co73.yaml  config_anamerger_co74.yaml  (+24 more)
scripts/config/bar_config/: VANDLEBars.txt  config_gen.sh
scripts/config/corrector/: config_gen.sh.in
scripts/run/: run_merger_Cu.pbs.e3924396  run_merger_Cu.pbs.o3924396
scripts/xml_configs/: ConfigProduction105to112.xml  ConfigProduction14to66.xml  ConfigProduction1to10.xml  ConfigProduction68to103.xml  TimeCal_medium.xml  cf252.xml  det0_calibration_fitresults.txt  det0_data_fitresults.txt  det1_calibration_fitresults.txt  det1_data_fitresults.txt  det2_calibration_fitresults.txt  det2_data_fitresults.txt  det3_calibration_fitresults.txt  det3_data_fitresults.txt  det4_calibration_fitresults.txt  det4_data_fitresults.txt  det5_calibration_fitresults.txt  det5_data_fitresults.txt  det6_calibration_fitresults.txt  det6_data_fitresults.txt  det7_calibration_fitresults.txt  det7_data_fitresults.txt  hagan0.txt  hagan1.txt  hagan10.txt  hagan11.txt  hagan12txt.txt  hagan2.txt  hagan3.txt  hagan4.txt  hagan5.txt  hagan6.txt  hagan7.txt  hagan8.txt  hagan9.txt  hagdyn0.txt  hagdyn1.txt  hagdyn10.txt  hagdyn11.txt  hagdyn2.txt  (+9 more)
share/: CMakeLists.txt
share/modulefiles/: merger
source/: AidaTSScannor.cpp  BRIKENTSScannor.cpp  BetaTSScannor.cpp  BigRIPSTSScannor.cpp  CMakeLists.txt  E19044BetaTSScanor.cpp  E19044BetaTreeMerger.cpp  E19044ImplantTSScanor.cpp  E19044NEXTTSScanor.cpp  FDSiBetaTSScanor.cpp  FDSiBetaTreeMerger.cpp  FDSiImplantTSScanor.cpp  FDSiVANDLETSScanor.cpp  ImplantTSScannor.cpp  RemainTime.cpp  TSScannorBase.cpp  TreeMerger.cpp  YSOMap.cxx  YSOPixelatedMap.cpp  YamlParameter.cpp  YamlReader.cpp
trace_analyzer/: CMakeLists.txt  PspmtAnalyzer.cpp  PspmtAnalyzer.hpp  PspmtAnalyzerData.hpp  PspmtData.hpp  TraceAnalyzer.cpp  TraceAnalyzer.hpp  TraceAnalyzerData.cpp  TraceAnalyzerData.hpp  TraceAnalyzerDataLinkDef.hpp  TraceAnalyzerMain.cpp  YSOMap.cxx  YSOMap.h  YSOPixelatedMap.cpp  YSOPixelatedMap.hpp
tree_dump2/: CMakeLists.txt  DumpTreeData.h  TreeDump.cpp  TreeDumpDataLinkDef.h
tree_processors/include/: BaseSelector.hpp
